2008-03-28  Magnus Henoch  <mange@freemail.hu>

	* net/dns.el (dns-write): Use set-buffer-multibyte.

2008-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-sha1): New fun.
	(vc-bzr-state-heuristic): New fun, extracted from vc-bzr-registered.
	(vc-bzr-registered): Use it.

2008-03-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-kill-dir-status-process): Simplify.
	(vc-status-refresh): Make sure the buffer is live.
	(ring): Don't require it, not used.

2008-03-28  Wilson Snyder  <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el (verilog-auto-inout-module):
	Add optional regular expression to AUTOINOUTMODULE.
	(verilog-inject-auto, verilog-auto-arg, verilog-auto-inst)
	(verilog-auto-inst-param, verilog-auto-reg)
	(verilog-auto-reg-input, verilog-auto-wire, verilog-auto-output)
	(verilog-auto-output-every, verilog-auto-input)
	(verilog-auto-inout, verilog-auto-sense, verilog-auto-tieoff)
	(verilog-auto-unused, verilog-auto): Update documentation to use
	more obvious instance module names versus cell names.

2008-03-28  Jan Djärv  <jan.h.d@swipnet.se>

	* progmodes/compile.el (compilation-mode-tool-bar-map): Only enable
	kill if a process is running.

	* progmodes/grep.el (grep-mode-tool-bar-map): The same.

2008-03-28  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Add new backend function 'status-extra-headers.
	(vc-default-status-extra-headers): New function.
	(vc-status-headers): Call 'status-extra-headers.  Add colors.

	* vc-git.el (vc-git-status-extra-headers): New function.

2008-03-28  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-menu.el (cal-menu-holidays-menu)
	(cal-menu-list-holidays-year, cal-menu-list-holidays-following-year)
	(cal-menu-list-holidays-previous-year): Simplify now that 2nd arg of
	holiday-list is optional.
	(calendar-mouse-holidays): Remove un-needed local `l'.

	* calendar/cal-move.el (calendar-cursor-to-nearest-date):
	Remove un-needed local `date'.