@@ -1,3 +1,9 @@
+2008-03-29  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc.el (vc-update): Check if the buffer is unsaved only if it
+	actually exists.
+	(vc-status-mode-map, vc-status-menu-map): Bind vc-update.
+
 2008-03-28  Magnus Henoch  <mange@freemail.hu>
 
 	* net/dns.el (dns-write): Use set-buffer-multibyte.
